tests/spec/lex/snapshots/string_literal_empty.snap
---
source: tests/spec/lex/mod.rs
description: "\"\""
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 2,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
