tests/spec/lex/snapshots/string_literal_multiline.snap
---
source: tests/spec/lex/mod.rs
description: |-
  "a
  b"
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"a\nb\"",
            byte_offset: 0,
            byte_length: 5,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
