tests/spec/lex/snapshots/string_literal_with_bell_escape.snap
---
source: tests/spec/lex/mod.rs
description: "\"\\x1b]11;?\\a\""
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"\\x1b]11;?\\a\"",
            byte_offset: 0,
            byte_length: 13,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
