tests/spec/lex/snapshots/string_literal_with_c_style_escapes.snap
---
source: tests/spec/lex/mod.rs
description: "\"\\a\\b\\f\\v\""
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"\\a\\b\\f\\v\"",
            byte_offset: 0,
            byte_length: 10,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 10,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
