tests/spec/lex/snapshots/string_literal_with_escaped_backslash.snap
---
source: tests/spec/lex/mod.rs
description: "\"backslash: \\\\\""
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"backslash: \\\\\"",
            byte_offset: 0,
            byte_length: 15,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 15,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
