tests/spec/lex/snapshots/string_literal_with_escaped_char.snap
---
source: tests/spec/lex/mod.rs
description: "\"hello\\nworld\\t\""
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"hello\\nworld\\t\"",
            byte_offset: 0,
            byte_length: 16,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 16,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
