tests/spec/lex/snapshots/string_literal_with_unicode_escape_bmp.snap
---
source: tests/spec/lex/mod.rs
description: "\"caf\\u{00E9}\""
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"caf\\u{00E9}\"",
            byte_offset: 0,
            byte_length: 13,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
