tests/spec/lex/snapshots/struct_keyword.snap
---
source: tests/spec/lex/mod.rs
description: struct
---
LexResult {
    tokens: [
        Token {
            kind: Struct,
            text: "struct",
            byte_offset: 0,
            byte_length: 6,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
